@@ -1,4 +1,6 @@
 release 0.2.1 (2007-08-xx)
+- 'jersey-on-glassfish.xml' ant script added to distribution
+  so that users can install jersey jars, docs and examples on GlassFish
 - Simpler getting started document included.
 - Fixed bug that caused matrix parameters to be decoded twice.
 - JAXB beans can be serialized as JSON or XML using one HTTP method with
